fix(table): avoid flickering of cursor while hovering & moving the cursor on rows
This is done by disabling the resize handles in cells
inside rows. According to the most common universal convention
of resizing columns in a table, users drag and pull the edges of the
column headers. So our tables will also behave the same after this fix.

--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -130,6 +130,10 @@ $table--limel-table--row-selector: 1;
             justify-content: center;
         }
     }
+
+    .tabulator-col-resize-handle {
+        display: none;
+    }
 }
 
 .tabulator-col,
